--- a/pages/board/_board/d/diagram.html
+++ b/pages/board/_board/d/diagram.html
@@ -11,5 +11,7 @@
     <div v-else>
       loading...
     </div>
+    <div class="work-under-construction"
+    >Work In Progress</div>
   </div>
 </div>
